[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zhihubackup"
dynamic = ["version"]
description = "Backup your Zhihu contents before quitting Zhihu."
authors = [
    { name = "Jinzhe Zeng", email = "jinzhe.zeng@rutgers.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    "requests",
    "tqdm",
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["zhihu"]

[project.urls]
repository = "https://github.com/njzjz/zhihubackup"

[project.optional-dependencies]
node = [
    "nodejs-wheel",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["zhihubackup*"]

[tool.setuptools_scm]
